--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
       <div class="w-slider-nav w-round"></div>
     </div>
   </div>
+  <div id="bm"></div>
+  <script src="lottie.js"> </script>
+  <script src="index.js"> </script>
+
   <div class="w-container"></div>
   <footer id="footer" class="footer">
     <div class="container-14 w-container">
